springboot-app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: springboot-demo
  name: springboot-demo
  namespace: springboot-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: springboot-demo
        deployment: springboot-demo
    spec:
      containers:
        - image: >-
            image-registry.openshift-image-registry.svc:5000/springboot-demo/springboot-demo:1.3.6
          imagePullPolicy: IfNotPresent
          name: springboot-demo
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
