springboot-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: springboot-demo
  name: springboot-demo
  namespace: springboot-demo
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app: springboot-demo
    deployment: springboot-demo
  type: ClusterIP
