springboot-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: springboot-demo
  name: springboot-demo
  namespace: springboot-demo
spec:
  host: springboot-demo.apps.ocp4.piotr-owczarc.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: springboot-demo
